<resources>
    <string name="app_name">IconsHub</string>
    <string name="iconshub_logo">iconsHub logo</string>
    <string name="slider_image">Slider Image</string>
    <string name="slider_1_description">An Open Space for Researchers , Innovators ,Consultants and Students</string>
    <string name="subscribe">Subscribe</string>
    <string name="slider_2_description">We have a Unique space for Learning and Development</string>
    <string name="slider_3_description">Simple, Intuitive and Expertly Crafted!</string>
    <string name="co_working_space">Co-Working Space</string>
    <string name="co_working_description">We offer co-working space for entrepreneurs, start-ups and personal space</string>
    <string name="high_speed_internet">High Speed Internet</string>
    <string name="hight_speed_net_desc">We at iCON Hub offers services with high speeds of internet for your research, conference calls and innovation</string>
    <string name="events_and_networking">Events and Networking</string>
    <string name="events_desc">We offer venue for events and platforms for researchers to collaborate</string>
    <string name="snacks_shop">Snacks Shop</string>
    <string name="snacks_desc">Feel free to Drop in for a few snacks on your way home</string>
    <string name="garden_and_recreation">Garden and Recreation</string>
    <string name="garden_desc">Let Go of yourself with our cool and Refreshing Garden, Or just take a picture and save the memory</string>
    <string name="board_room">Board Room</string>
    <string name="board_description">An All-Equipped BoardRoom Is Just The Perfect Place For Your Meetings. What Are You Waiting For?</string>
    <string name="consultancy">Consultancy</string>
    <string name="consultancy_desc">A perfect consultancy office is what you need to give the best to your clients</string>
    <string name="contact">Contact</string>
    <string name="social">Social</string>
    <string name="payments">Payments</string>
    <string name="help">Help</string>
    <string name="innovation">Innovation</string>
    <string name="plans">Plans</string>
    <string name="account">Account</string>
    <string name="gallery">Gallery</string>
    <string name="about_us">About Us</string>
    <string name="icons_co_working">iCONS HUB Co-Working</string>
    <string name="co_working_explanation">Whether you have a team of 2 or 200,iconsHub keeps everyone on the same page</string>
    <string name="innovation_explanation">innovation centre dedicated to accelerating the application of social capital and technology for economic prosperity</string>
    <string name="starter">Starter</string>
    <string name="ksh_3000_month">Ksh.3000/Month</string>
    <string name="starter_explanation">Free internet access <br /> Limited Access to computers and workspace <br /> No access to offices and boardrooms</string>
    <string name="ksh_5000_month">Ksh.5000/Month</string>
    <string name="basic">Basic</string>
    <string name="basic_explanation">High Speed internet <br /> Unlimited Access to computers and workspace <br /> Up to 4 hours access to offices and boardrooms per day</string>
    <string name="ultimate">Ultimate</string>
    <string name="ksh_10000_month">Ksh.10000/Month</string>
    <string name="ultimate_explanation">Uninterrupted High Speed Internet <br /> Unlimited Access to computers and workspace <br /> Unlimited access to offices and boardrooms </string>
    <string name="about_us_explanation">A place where all ideas have the potential of becoming great companies!<br /> Our love to see entrepreneurs succeed has enabled us to create a place where ideas can thrive and achieve their potential.<br /> Furthermore, we organize incubation and training programs for entrepreneurs and young professionals. Here you’ll get unlimited access to mentorship and skills training.<br /> We pride ourselves for having diversity. Our network is so rich that you can join with just the idea but assured that you will exit with both the knowledge, skills, network and the business itself. This makes a one-stop center for entrepreneurship.<br /> Get the chance to engage with our developing communities of; <br />Young professionals <br />Mentors Entrepreneurs <br />Startup Companies</string>
    <string name="social_string">Icons Social</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">LinkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="website">Website</string>
    <string name="home">Home</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="dummy_explanation">To join us , you can register for free from our app\'s account page or by going to our website https://iconshub.co.ke and clicking or the account menu. You will be prompted to fill a registration form</string>
    <string name="dummy_question">How can i join icons hub?</string>
    <string name="faq3">Account activation for those who register using the app is instantaneous.
            However, you might experience slight delays if you register from the
            website but it wont take more than 4  hours. If you\'re subscribing for
            a new package, it will be activated in 10 minute\'s time</string>
    <string name="version_information">Version Information</string>
    <string name="version">Version</string>
    <string name="_1_0_debug_release">1.0 (Debug Release)</string>
    <string name="licences">Licences</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account_sign_up">Do not have an Account? Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="i_prefer_not_to_say">I prefer not to say</string>
    <string name="others">Others</string>
    <string name="select_gender">Select Gender</string>
    <string name="researcher">Researcher</string>
    <string name="innovator">Innovator</string>
    <string name="mentor">Mentor</string>
    <string name="mentee">Mentee</string>
    <string name="select_role">Select Role</string>
    <string name="consultant">Consultant</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login_with_google">Login With Google</string>


</resources>