<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_baseline_house_24"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_contact"
        android:icon="@drawable/ic_baseline_contact_phone_24"
        android:title="@string/contact" />

    <item
        android:id="@+id/menu_social"
        android:icon="@drawable/ic_baseline_connect_without_contact_24"
        android:title="@string/social" />

    <item
        android:id="@+id/menu_payment"
        android:icon="@drawable/ic_baseline_mobile_screen_share_24"
        android:title="@string/payments" />

    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_baseline_help_outline_24"
        android:title="@string/help" />

</menu>