<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_black"
        app:title="Create an Account"
        app:navigationIconTint="@color/icons_2"
        app:titleTextColor="@color/icons_2"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/icons_2"
                android:hint="@string/first_name"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/nameHolder"
                android:layout_marginEnd="10dp"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/firstNameInput"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/icons_2"
                android:hint="@string/last_name"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_below="@id/nameHolder"
                android:layout_marginTop="10dp"
                android:id="@+id/lastnameHolder"
                android:layout_marginEnd="10dp"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lastNameInput"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/icons_2"
                android:hint="@string/email"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/emailHolder"
                android:layout_below="@id/lastnameHolder"
                android:layout_marginEnd="10dp"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/emailInput"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/icons_2"
                android:hint="@string/phone_number"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/phoneHolder"
                app:counterMaxLength="10"
                app:counterEnabled="true"
                android:layout_below="@id/emailHolder"
                app:counterTextColor="@color/icons_2"
                app:counterOverflowTextColor="@color/icons_1"
                android:layout_marginEnd="10dp"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/phoneInput"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textview.MaterialTextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/select_gender"
               android:layout_below="@+id/phoneHolder"
               android:textStyle="bold"
               android:layout_marginStart="10dp"
               android:id="@+id/gender"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender"
                android:id="@+id/genderInput"
                >
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    app:buttonTint="@color/icons_2"
                    android:id="@+id/male"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    app:buttonTint="@color/icons_2"
                    android:id="@+id/female"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_prefer_not_to_say"
                    app:buttonTint="@color/icons_2"
                    android:id="@+id/others"/>

            </RadioGroup>


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_role"
                android:layout_below="@+id/genderInput"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:id="@+id/role"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/role"
                android:id="@+id/roleInput"
                >
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/researcher"
                    app:buttonTint="@color/icons_2"
                    android:id="@+id/rsch"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/innovator"
                    app:buttonTint="@color/icons_2"
                    android:id="@+id/invt"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mentor"
                    app:buttonTint="@color/icons_2"
                    android:id="@+id/mnt"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mentee"
                    app:buttonTint="@color/icons_2"
                    android:id="@+id/mntee"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consultant"
                    app:buttonTint="@color/icons_2"
                    android:id="@+id/snsltnt"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/roleInput"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/password"
                android:id="@+id/passwordHolder"
                app:boxBackgroundColor="@color/white"
                app:passwordToggleEnabled="true"
                app:boxStrokeColor="@color/icons_2"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/passwordInput"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordHolder"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/confirm_password"
                android:id="@+id/passwordConfirmHolder"
                app:passwordToggleEnabled="true"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/icons_2"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/passwordConfirmInput"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:cornerRadius="20dp"
                android:text="@string/login"
                android:layout_centerHorizontal="true"
                android:id="@+id/btnSignUpSignUp"
                android:layout_below="@id/passwordConfirmHolder"
                android:textColor="@color/black"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="@string/already_have_an_account_login"
                android:paddingTop="10dp"
                android:layout_below="@+id/btnSignUpSignUp"
                android:layout_marginStart="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="20dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/btnSignUpLogin"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:cornerRadius="20dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeWidth="3dp"
                app:strokeColor="@color/icons_2"
                android:text="@string/login_with_google"
                android:layout_centerHorizontal="true"
                android:id="@+id/btnSign"
                android:layout_below="@id/btnSignUpLogin"
                android:textColor="@color/black"/>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>