<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/hub_logo"
        android:id="@+id/app_logo"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_layout_background"
        android:elevation="20dp"
        android:padding="5dp">
<com.google.android.material.textview.MaterialTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:text="@string/welcome_back"
    android:paddingTop="10dp"
    android:layout_marginStart="10dp"
    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
    android:id="@+id/welcome"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/login_to_your_account"
            android:paddingTop="10dp"
            android:layout_below="@+id/welcome"
            android:textColor="@color/icons_2"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:id="@+id/loginTxt"/>
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/loginTxt"
    app:boxStrokeColor="@color/icons_2"
    android:hint="@string/email"
    android:layout_marginBottom="20dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:id="@+id/emailHolder"
    android:layout_marginEnd="10dp">
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/emailInput"
        android:inputType="textEmailAddress"/>
</com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailHolder"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            android:id="@+id/passwordHolder"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/icons_2"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/passwordInput"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="@string/forgot_password"
            android:paddingTop="10dp"
            android:layout_below="@+id/passwordHolder"
            android:layout_marginStart="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="20dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:id="@+id/resetPassword"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cornerRadius="20dp"
            android:text="@string/login"
            android:layout_centerHorizontal="true"
            android:id="@+id/btnLoginLogin"
            android:layout_below="@id/resetPassword"
            android:textColor="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="@string/do_not_have_an_account_sign_up"
            android:paddingTop="10dp"
            android:layout_below="@+id/btnLoginLogin"
            android:layout_marginStart="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="20dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:id="@+id/btnLoginSignUp"
            />

    </RelativeLayout>

</RelativeLayout>