<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="7dp"
    app:cardBackgroundColor="@color/icons_2"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/starter"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/title1"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_border_color="@color/icons_2"
            app:civ_border_width="5dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/starterPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatar1"
            android:layout_margin="5dp"
            android:text="@string/ksh_3000_month"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/icons_1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/starterExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/starterPrice"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/starter_explanation"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnSubscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/starterExplanation"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:text="@string/subscribe"
            app:backgroundTint="@color/icons_2"
            app:icon="@drawable/arrow_top_right_thin_circle_outline"
            app:iconGravity="textEnd" />
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>